--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,20 +1,45 @@
-
 .navbar {
-  padding: 1rem 2rem;
-  background-color: #2c3e50;
-  color: white;
   display: flex;
-  gap: 1.5rem;
   align-items: center;
+  justify-content: space-between;
+  background-color: #b2baf4; /* Color claro */
+  padding: 10px 20px;
 }
+
 
 .navbar a {
   color: white;
   text-decoration: none;
-  font-weight: 500;
-  transition: color 0.3s ease;
+  margin-right: 15px;
+  font-weight: bold;
 }
 
-.navbar a:hover {
-  color: #f39c12;
+.navbar-logo {
+  font-size: 20px;
+  font-weight: bold;
+  color: white;
+  text-decoration: none;
 }
+
+.logo-img {
+  height: 80px;
+}
+
+
+.cart-widget {
+  position: relative;
+  color: rgb(0, 0, 0);
+  cursor: pointer;
+}
+
+.cart-count {
+  position: absolute;
+  top: -8px;
+  right: -10px;
+  background: red;
+  color: white;
+  border-radius: 50%;
+  font-size: 0.75rem;
+  padding: 2px 6px;
+}
+
